--- a/index.html
+++ b/index.html
@@ -206,31 +206,145 @@
         </section>
 
         <section id="games-content" class="p-4">
-            <div class="rounded-lg border bg-gradient-to-br from-blue-50 to-blue-100 border-none shadow-xl mx-auto max-w-4xl">
-                <div class="p-8">
-                    <div class="text-center">
-                        <div class="flex justify-center mb-6">
-                            <div class="bg-gradient-to-r from-blue-400 to-blue-500 p-4 rounded-full">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-puzzle text-white">
-                                    <path d="M15.39 4.39a1 1 0 0 0 1.68-.474 2.5 2.5 0 1 1 3.014 3.015 1 1 0 0 0-.474 1.68l1.683 1.682a2.414 2.414 0 0 1 0 3.414L19.61 15.39a1 1 0 0 1-1.68-.474 2.5 2.5 0 1 0-3.014 3.015 1 1 0 0 1 .474 1.68l-1.683 1.682a2.414 2.414 0 0 1-3.414 0L8.61 19.61a1 1 0 0 0-1.68.474 2.5 2.5 0 1 1-3.014-3.015 1 1 0 0 1 .474-1.68L2.6 12.83a2.414 2.414 0 0 1 0-3.414L4.39 7.39a1 1 0 0 0-.474-1.68 2.5 2.5 0 1 1 3.015-3.014 1 1 0 0 0 1.68.474L11.17 2.6a2.414 2.414 0 0 1 3.414 0z"></path>
-                                </svg>
-                            </div>
-                        </div>
-                        <h2 class="text-3xl font-bold text-gray-800 mb-4">Игры</h2>
-                        <p class="text-sm text-blue-600 mb-8">Интерактивное обучение через развлечения</p>
-                    </div>
-                    <div class="p-6 pt-0">
-                        <div class="text-center py-12">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-puzzle mx-auto text-blue-400 mb-4">
-                                <path d="M15.39 4.39a1 1 0 0 0 1.68-.474 2.5 2.5 0 1 1 3.014 3.015 1 1 0 0 0-.474 1.68l1.683 1.682a2.414 2.414 0 0 1 0 3.414L19.61 15.39a1 1 0 0 1-1.68-.474 2.5 2.5 0 1 0-3.014 3.015 1 1 0 0 1 .474 1.68l-1.683 1.682a2.414 2.414 0 0 1-3.414 0L8.61 19.61a1 1 0 0 0-1.68.474 2.5 2.5 0 1 1-3.014-3.015 1 1 0 0 1 .474-1.68L2.6 12.83a2.414 2.414 0 0 1 0-3.414L4.39 7.39a1 1 0 0 0-.474-1.68 2.5 2.5 0 1 1 3.015-3.014 1 1 0 0 0 1.68.474L11.17 2.6a2.414 2.414 0 0 1 3.414 0z"></path>
-                            </svg>
-                            <p class="text-blue-600 text-lg">Раздел в разработке</p>
-                            <p class="text-blue-500 text-sm mt-2">Скоро здесь появятся захватывающие игры</p>
-                        </div>
+    <div class="rounded-lg border bg-gradient-to-br from-blue-50 to-blue-100 border-none shadow-xl mx-auto max-w-4xl">
+        <div class="p-8">
+            <div class="text-center">
+                <div class="flex justify-center mb-6">
+                    <div class="bg-gradient-to-r from-blue-400 to-blue-500 p-4 rounded-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-puzzle text-white">
+                            <path d="M15.39 4.39a1 1 0 0 0 1.68-.474 2.5 2.5 0 1 1 3.014 3.015 1 1 0 0 0-.474 1.68l1.683 1.682a2.414 2.414 0 0 1 0 3.414L19.61 15.39a1 1 0 0 1-1.68-.474 2.5 2.5 0 1 0-3.014 3.015 1 1 0 0 1 .474 1.68l-1.683 1.682a2.414 2.414 0 0 1-3.414 0L8.61 19.61a1 1 0 0 0-1.68.474 2.5 2.5 0 1 1-3.014-3.015 1 1 0 0 1 .474-1.68L2.6 12.83a2.414 2.414 0 0 1 0-3.414L4.39 7.39a1 1 0 0 0-.474-1.68 2.5 2.5 0 1 1 3.015-3.014 1 1 0 0 0 1.68.474L11.17 2.6a2.414 2.414 0 0 1 3.414 0z"></path>
+                        </svg>
                     </div>
                 </div>
+                <h2 class="text-3xl font-bold text-gray-800 mb-4">Игры</h2>
+                <p class="text-sm text-blue-600 mb-8">Интерактивное обучение через развлечения</p>
             </div>
-        </section>
+
+            <div class="p-6 pt-0">
+                <div class="grid grid-cols-2 gap-4">
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-blue-100 hover:border-blue-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-blue-50 p-3 rounded-full mb-3 group-hover:bg-blue-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-blocks text-blue-600">
+                                    <rect width="7" height="7" x="14" y="3" rx="1"></rect>
+                                    <path d="M10 21V8a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1z"></path>
+                                    <rect width="7" height="7" x="3" y="3" rx="1"></rect>
+                                    <rect width="7" height="7" x="14" y="14" rx="1"></rect>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-blue-700 transition-colors">Удивительный конструктор</h4>
+                            <p class="text-xs text-gray-500">цифровой конструктор</p>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-pink-100 hover:border-pink-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-pink-50 p-3 rounded-full mb-3 group-hover:bg-pink-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-music text-pink-600">
+                                    <path d="M9 18V5l12-2v13"></path>
+                                    <circle cx="6" cy="18" r="3"></circle>
+                                    <circle cx="18" cy="16" r="3"></circle>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-pink-700 transition-colors">Звуковой цех</h4>
+                            <p class="text-xs text-gray-500">музыкально-творческие игры</p>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-yellow-100 hover:border-yellow-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-yellow-50 p-3 rounded-full mb-3 group-hover:bg-yellow-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-open text-yellow-600">
+                                    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                                    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-yellow-700 transition-colors">Истории в картинках</h4>
+                            <p class="text-xs text-gray-500">виртуальное сказкотворчество</p>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-purple-100 hover:border-purple-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-purple-50 p-3 rounded-full mb-3 group-hover:bg-purple-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-palette text-purple-600">
+                                    <circle cx="13.5" cy="6.5" r=".5"></circle>
+                                    <circle cx="17.5" cy="10.5" r=".5"></circle>
+                                    <circle cx="8.5" cy="7.5" r=".5"></circle>
+                                    <path d="M11 2a2 2 0 0 0-2 2v2c0 2.2-1.8 4-4 4H3l2 8h13l2-8h-1c-2.2 0-4-1.8-4-4V4c0-1.1-.9-2-2-2h-2z"></path>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-purple-700 transition-colors">Цифровая мастерская искусства</h4>
+                            <p class="text-xs text-gray-500">визуальное творчество</p>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-green-100 hover:border-green-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-green-50 p-3 rounded-full mb-3 group-hover:bg-green-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-building-2 text-green-600">
+                                    <path d="M6 22V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v17"></path>
+                                    <path d="M12 7h.01"></path>
+                                    <path d="M12 11h.01"></path>
+                                    <path d="M12 15h.01"></path>
+                                    <path d="M12 19h.01"></path>
+                                    <path d="M4 17h16"></path>
+                                    <path d="M4 21h16"></path>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-green-700 transition-colors">Город мечты</h4>
+                            <p class="text-xs text-gray-500">архитектура</p>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-cyan-100 hover:border-cyan-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-cyan-50 p-3 rounded-full mb-3 group-hover:bg-cyan-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-globe text-cyan-600">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <path d="M12 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2"></path>
+                                    <path d="M2 12h20"></path>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-cyan-700 transition-colors">Арт-путешествия</h4>
+                            <p class="text-xs text-gray-500">прикладное смешение культур</p>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-orange-100 hover:border-orange-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-orange-50 p-3 rounded-full mb-3 group-hover:bg-orange-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-notebook-pen text-orange-600">
+                                    <path d="M12 20h9"></path>
+                                    <path d="M16 11l-3 3 1.5 1.5c.3.3.7.7 1.2.7h1c.4 0 .8-.4 1.2-.7L22 13.5l-3-3z"></path>
+                                    <path d="M2 5v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2z"></path>
+                                    <line x1="16" x2="22" y1="13" y2="13"></line>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-orange-700 transition-colors">Творческий дневник</h4>
+                            <p class="text-xs text-gray-500">персонализация и достижения</p>
+                        </div>
+                    </a>
+
+                    <a href="#" target="_blank" class="group block h-full focus:outline-none">
+                        <div class="flex flex-col items-center text-center p-4 bg-white rounded-xl shadow-sm border border-red-100 hover:border-red-400 hover:shadow-lg transition-all duration-300 hover:scale-[1.02] h-full">
+                            <div class="bg-red-50 p-3 rounded-full mb-3 group-hover:bg-red-100 transition-colors">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-check text-red-600">
+                                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"></path>
+                                    <path d="m9 12 2 2 4-4"></path>
+                                </svg>
+                            </div>
+                            <h4 class="font-bold text-gray-800 text-sm mb-1 group-hover:text-red-700 transition-colors">Безопасная цифровая зона</h4>
+                            <p class="text-xs text-gray-500">обучение цифровой этике</p>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
         <section id="about-content" class="p-4">
             <div class="rounded-lg border bg-gradient-to-br from-green-50 to-green-100 border-none shadow-xl mx-auto max-w-4xl">
